<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemNewest"
        android:title="@string/newest"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemWoman"
        android:title="@string/woman"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemMan"
        android:title="@string/man"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemFashion"
        android:title="@string/fashion"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemElectronics"
        android:title="@string/electronics"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemHome"
        android:title="@string/home_amp_furniture"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemCosmetic"
        android:title="@string/cosmetic"
        app:showAsAction="never" />
    
</menu>