<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.splash.SplashFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/loading_animation" />

    <ImageView
        android:id="@+id/imageSplashLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_logo_24"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_alignBottom="@id/tvSplashScreen"
        app:tint="@color/green"
        android:importantForAccessibility="no"
        android:contentDescription="@string/splashlogoimage" />

    <TextView
        android:id="@+id/tvSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/alata"
        android:text="@string/buy_buy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_alignBottom="@id/tvSplashScreenSign"
        android:textColor="@color/gray"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tvSplashScreenSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designed_by_meetozan"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/alata"
        android:textColor="@color/gray"
        android:textSize="12sp"/>

</RelativeLayout>