<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoppingCartLayout"
    tools:context=".ui.shopping_cart.ShoppingCartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <TextView
            android:id="@+id/shoppingCartToolBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/secondaryColor"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:text="@string/shopping_cart"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shoppingCartRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/shoppingCartToolBar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSearchNotFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/shoppingCartToolBar"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/lightGray"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    android:contentDescription="@string/imageerrornotfound"
                    android:src="@drawable/ic_shopping_cart"
                    app:tint="@color/lightRed" />

                <TextView
                    android:id="@+id/tvNotFoundError"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:fontFamily="@font/alata"
                    android:text="@string/you_haven_t_added_anything_to_the_cart"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnGoHome"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:elevation="8dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/go_shop"
                    android:textColor="@color/secondaryColor"
                    android:textSize="16sp"
                    app:icon="@drawable/ic_shopping_basket"
                    app:iconTint="@color/secondaryColor"
                    app:strokeColor="@color/secondaryLightColor"
                    app:strokeWidth="0.4dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvShoppingCartTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-8dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:visibility="invisible"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.7dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTotalPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/total_price"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTotalPriceText"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/alata"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalPriceLira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTotalPriceText"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="16dp"
                    android:layout_toEndOf="@id/tvTotalPrice"
                    android:fontFamily="@font/alata"
                    android:text="@string/turkish_lira"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConfirmCart"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:elevation="12dp"
                    android:fontFamily="@font/alata"
                    android:text="@string/confirm_cart"
                    android:textColor="@color/secondaryDarkColor"
                    android:textSize="16sp"
                    app:icon="@drawable/ic_shopping_cart"
                    app:iconTint="@color/secondaryDarkColor"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>