<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:elevation="12dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:elevation="8dp"
                android:fontFamily="@font/alata"
                android:text="@string/edit_profile"
                android:textColor="@color/secondaryColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnCloseDialog"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:elevation="8dp"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/closedialog" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEditName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/secondaryColor"
                android:hint="@string/enter_name"
                android:maxLines="1"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtEditProfile">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLength="25"
                    android:textColorHint="@color/primaryDarkColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEditNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_number"
                android:maxLines="1"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/secondaryColor"
                app:prefixText="+90 | "
                app:prefixTextColor="@color/black"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEditName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:maxLength="25"
                    android:textColorHint="@color/primaryDarkColor" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnEditProfile"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/go"
                android:textColor="@color/secondaryColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEditNumber"
                app:strokeColor="@color/secondaryColor"
                app:strokeWidth="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>