<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorites.FavoritesFragment">

    <RelativeLayout
        android:id="@+id/favoritesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/favToolBar"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/primaryColor"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/alata"
            android:text="@string/favorites_w_unicode"
            android:layout_height="50dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvFavoritesNotFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:layout_below="@id/favToolBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="150dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageNotFoundFavorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:alpha="0.8"
                    android:contentDescription="@string/imageerrornotfound"
                    android:src="@drawable/ic_do_not_disturb"
                    app:tint="@color/lightRed" />

                <TextView
                    android:id="@+id/tvNotFoundError"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.5"
                    android:fontFamily="@font/alata"
                    android:text="@string/you_haven_t_added_anything_to_your_favorites"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoritesRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="10dp"
            android:visibility="gone"
            android:layout_below="@id/favToolBar"
            tools:layout_editor_absoluteX="9dp" />
    </RelativeLayout>
</layout>