<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sign_in.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSignInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/sign_in"
            android:textColor="@color/primaryColor"
            android:textSize="36sp"
            android:textStyle="bold"
            android:fontFamily="@font/alata"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardSignInEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSignInTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp"
            app:cardElevation="-2sp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/e_mail"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/secondaryColor"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/loginEmailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/alata"
                    android:textColorHint="@color/secondaryDarkColor"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignInPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardSignInEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:cardElevation="-2sp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/secondaryColor"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/secondaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/loginEmailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberPassword"
                    android:fontFamily="@font/alata"
                    android:textColorHint="@color/secondaryDarkColor"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvSignInToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_don_t_have_an_account_s_gn_up_now"
            android:textSize="11sp"
            android:textStyle="italic"
            android:fontFamily="@font/alata"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardSignInPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="#C3FFC107"
            android:elevation="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:fontFamily="@font/alata"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignInToSignUp"
            app:strokeColor="@color/primaryLightColor"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>